# image_tools

./: .gitignore  README.md
checkboard/: checkboard.py  test.sh
color2gray/: color2gray.py  test.sh
crop/: crop.py  test.sh
crop_blender_view/: crop_blender_view.py  test.sh
crop_wechat_window/: crop_wechat_window.py  test.sh
cut_blender_view/: cut_blender_view.py  test.sh
exr_tools/average/: average.py  test.sh
exr_tools/average_channels/: average_channels.py  test.sh  test_out.exr
exr_tools/exrmul/: 512x512_1.00_0.00_0.00.exr  CMakeLists.txt  exrmul.cpp  exrmul.py  mul.exr  test.sh
exr_tools/exror/: exror.py  noisy.exr  test.sh
exr_tools/exrscale/: CMakeLists.txt  exrscale.py  test.exr  test.sh  test_out.exr
exr_tools/exrsum/: 512x512_0.00_0.00_1.00.exr  exrsum.py  test.sh
exr_tools/exrtime/: exrtime.py  test.py  test_no-time.exr  test_time.exr
exr_tools/extract_channel/: extract_channel.py  extract_channel_pyexr.py  test.sh  test_out_B.exr  test_out_G.exr  test_out_R.exr
exr_tools/mergexr/: mergexr.py  test.sh
exr_tools/mergexr/test/: test_1.exr  test_2.exr  test_4.exr  test_5.exr  test_6.exr
exr_tools/pure_color/: 512x512_0.00_0.00_0.00.exr  512x512_0.00_1.00_0.00.exr  512x512_1.00.exr  512x512_1.00_1.00_1.00_1.00.exr  pure_color.py  test.sh
exr_tools/zero_nonzero/: test.exr  test.sh  test_out.exr  zero_nonzero.py
grid/: grid.py  test.sh
inset/: inset.py  test.sh
scale/: scale.py  test.sh
stitch/: stitch.py  test.sh
subtitle_stack/: subtitle_stack.py  test.sh
